--- a/npcs/ronn_carle.yaml
+++ b/npcs/ronn_carle.yaml
@@ -260,7 +260,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction: The town noticeboard highlights an opportunity in bold letters, "LEARN". "For you," a hand slaps it, "I'll offer a deal"
+    introduction: The town noticeboard highlights an opportunity in bold letters, /"LEARN/". /"For you,/" a hand slaps it, /"I'll offer a deal/"
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
@@ -287,7 +287,10 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions: $characters$ "Education is over-rated. Skills, on the other hand", "Don't know to learn...learn to know to do", "Pragmatics, friends"
+    expressions:
+    - "Education is over-rated. Skills, on the other hand"
+    - "Don't know to learn...learn to know to do"
+    - "Pragmatics, friends"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -365,9 +368,11 @@ npc:
     combat-tactics: |
       Ronn talks down to opponents and avoids combat.
     special-equipment:
-    - <p><b>Wondrous Satchel of Libraries</b> - This bag allows its user to pull any 5 books of any topic from it. After 5 books have been pulled
+    - Wondrous Satchel of Libraries
+    - This bag allows its user to pull any 5 books of any topic from it. After 5 books have been pulled
     - the user cannot pull any more until they've returned one
-    - after which time they can pull another.</p><p><b>Bag of Holding</b></p>
+    - after which time they can pull another.
+    - Bag of Holding
 
   profile:
 
@@ -379,25 +384,4 @@ npc:
     # No length limit for now.
     #
     background-story: |
-      <p>While there is little known about their origins, Ronn <i>appears</i> as a middle-aged adult human male. Yet there are numerous questions and myths that swirl throughout the realms as to their origins. See, Ronn is far too well-read and intelligent to be of mundane or mortal origins. They have accrued such a wealth of knowledge and capacity to teach others that most merchants, even nobles, covet their abilities and - especially - their satchel</p><p>Consequently, They have learned to ensure their own safety by enlisting the help of adventurers and mercenaries to protect them. Their guidelines for their protectors is to maintain distance as not to gain unwanted attention, to permit free movement, and to not scare off the inquisitive; whom they welcome with open arms.</p><p>Ronn has a serious wanderlust, rarely staying in one town, city, or village for more than a week or two to spread their love of knowledge and accumulate even greater wealth.</p><p>Asexual and, in fact, without any noticeable confirmation of biological sex, they request that others use a variety of always changing pronouns when addressing them.</p>
-
-    #
-    # Personality (or something like that):
-    # Expand on the introduction, appearance, expressions, mannerisms, etc.
-    # without any length limits.
-    #
-    # Required.
-    # No length limit for now.
-    #
-
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - wp:status: publish
-  - _yoast_wpseo_focuskeywords: []
-  - _yoast_wpseo_keywordsynonyms: [""]
+      While there is little known about their origins, Ronn appears as a middle-aged adult human male. Yet there are numerous questions and myths that swirl throughout the realms as to their origins. See, Ronn is far too well-read and intelligent to be of mundane or mortal origins. They have accrued such a wealth of knowledge and capacity to teach others that most merchants, even nobles, covet their abilities and - especially - their satchel. Consequently, They have learned to ensure their own safety by enlisting the help of adventurers and mercenaries to protect them. Their guidelines for their protectors is to maintain distance as not to gain unwanted attention, to permit free movement, and to not scare off the inquisitive; whom they welcome with open arms. Ronn has a serious wanderlust, rarely staying in one town, city, or village for more than a week or two to spread their love of knowledge and accumulate even greater wealth. Asexual and, in fact, without any noticeable confirmation of biological sex, they request that others use a variety of always changing pronouns when addressing them.
